edition = "2023";  // successor to proto2 and proto3

package storage;
import "google/protobuf/go_features.proto";

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";
option features.(pb.go).api_level = API_HYBRID;
option features.field_presence = IMPLICIT;
option features.enum_type = OPEN;
// `packed=false` needs to be transformed to field-level repeated_field_encoding
// features in Editions syntax
option features.json_format = ALLOW;
option features.utf8_validation = VERIFY;

enum ContainerRuntime {
  UNKNOWN_CONTAINER_RUNTIME = 0;
  DOCKER_CONTAINER_RUNTIME = 1;
  CRIO_CONTAINER_RUNTIME = 2;
}

message ContainerRuntimeInfo {
  ContainerRuntime type = 1;
  string version = 2; // @gotags: search:"Container Runtime,store"
}
